2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/48_unray_minsu_bool.deca
// Description :
//      unray Minus devant un boolean 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération UnrayMinus - devant boolean n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    - true ;
}